static/solutions-advanced-labs/httpbin-example.yaml
# kubectl create deployment httpbin --image mccutchen/go-httpbin --dry-run=client -oyaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpbin
  name: httpbin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpbin
  strategy: {}
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - image: mccutchen/go-httpbin
        name: go-httpbin
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /status/200
            port: http
        readinessProbe:
          httpGet:
            path: /status/200
            port: http
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 128Mi
---
# kubectl expose deployment httpbin --port=80 --target-port=8080 --dry-run=client -oyaml > svc-example-httpbin.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: httpbin
  name: httpbin
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: httpbin
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin
spec:
  rules:
    - host: example-frontend-user4.training.cluster.songlaa.com
      http:
        paths:
          - path: /headers
            pathType: Prefix
            backend:
              service: 
                name: httpbin
                port: 
                  number: 80
  tls:
  - hosts:
    - example-frontend-user4.training.cluster.songlaa.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-hostname
spec:
  rules:
    - host: example-httpbin-user4.training.cluster.songlaa.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: httpbin
                port: 
                  number: 80
  tls:
  - hosts:
    - example-httpbin-user4.training.cluster.songlaa.com
