static/solutions-advanced-labs/cilium_network_policy_tofqdn.yaml
# it will NOT work before implementing this policy because there is a catch-all rule only allowing DNS
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "songlaa"
spec:
  endpointSelector:
    matchLabels:
      app: curl-deployment
  egress:
    - toEndpoints:
      - matchLabels:
          "k8s:io.kubernetes.pod.namespace": kube-system
          "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
           - port: "53"
             protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: "songlaa.com"

# to verify kubectl exec -it deploy/curl-deployment -- curl -m 5 -LI https://www.zhaw.ch
